@@ -1,6 +1,11 @@
+2011-11-22  Donal K. Fellows  <dkf@users.sf.net>
+
+	* generic/tclExecute.c (TclCompileObj): Simplify and de-indent the
+	logic so that it is easier to comprehend.
+
 2011-11-22  Jan Nijtmans  <nijtmans@users.sf.net>
 
-	* win/tclWinPort.h:   [Bug 2935503] Windows: file mtime
+	* win/tclWinPort.h:   [Bug 2935503]: Windows: file mtime
 	* win/tclWinFile.c:  sets wrong time (VS2005+ only)
 	* generic/tclTest.c:
 
